--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -1,10 +1,38 @@
 .myAccountBox{
     width: 500px;
+    text-align: center;
 }
-
+.myAccountContainer {
+    padding: 15px;
+    border: 1px solid rgba(0, 89, 191, 0.7);
+    margin-top: 50px;
+    border-radius: 50px;
+    box-shadow: 0px 0px 20px 5px rgba(0, 89, 191, 0.7);
+}
 .formContainer, .myAccountBox{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.completeAccountFormBox {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 5px;
+    margin-top: 40px;
+
+    .completeAccountBtn{
+        margin-top: 10px;
+        border-radius: 8px;
+        border: 0px solid black;
+        height: 45px;
+        width: 80px;
+        align-self: center;
+        font-size: 15px;
+        color: white;
+        background: #1ba71b;
+        font-weight: 700;
+    }
 }
