--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -36,3 +36,11 @@
         font-weight: 700;
     }
 }
+
+.deleteAccountBtn{
+    background: red;
+    color: white;
+    font-weight: 700;
+    padding: 10px;
+    border: none;
+}
