--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -38,7 +38,27 @@
 }
 
 .deleteAccountBtn{
+    margin-top: 50px;
     background: red;
+    color: white;
+    font-weight: 700;
+    padding: 10px;
+    border: none;
+}
+
+.changePasswordBtn{
+    margin-top: 50px;
+    background: rgb(41, 81, 47);
+    color: white;
+    font-weight: 700;
+    padding: 10px;
+    border: none;
+}
+
+
+.changePassword{
+    margin-top: 50px;
+    background: rgb(41, 70, 81);
     color: white;
     font-weight: 700;
     padding: 10px;
