--- a/src/components/style/global.css
+++ b/src/components/style/global.css
@@ -6,6 +6,7 @@
 @import "team.css";
 @import "footer.css";
 @import "signInUp.css";
+@import "crudEvent.css";
 button {
     cursor: pointer;
 }
@@ -19,4 +20,9 @@ html {
 
 * {
     font-family: 'Open Sans', sans-serif;
+}
+
+
+body{
+    padding-top: 90px;
 }
