--- a/src/components/style/homeNavbar.css
+++ b/src/components/style/homeNavbar.css
@@ -1,48 +1,34 @@
-.homeNavbar {
-    display: flex;
-    border-bottom: 1px solid #B40611;
-    align-items: center;
-    justify-content: space-around;
-    overflow: hidden;
-    background-color: white;
-    top: 0;
-    width: 100%;
-}
-
-.anchorItems {
-    display: flex;
-    gap: 30px;
-
-    > a{
-        font-weight: 400;
-        color: black;
-        text-decoration: none;
-    }
-}
-
-.logoNavbar {
-    background: black;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    > img {
-        height: 16px;
-        cursor: pointer;
-    }
-
-}
-.btnRedirectLoginPage{
+.logoEventec {
     background: black;
     color: white;
-    padding: 10px;
-    width: 100px;
-    border: none;
-    font-weight: 800;
-    cursor: pointer;
-
-    &:hover {
-        background-color: #B40611;
-        color: white;
-      }
+    padding: 5px;
+    border-radius: 7px;
 }
+
+    .logoEventec:hover{
+        color: white;
+    }
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: red;
+  }
+  
+  .hover-underline-animation::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: red;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
