--- a/src/components/style/hero.css
+++ b/src/components/style/hero.css
@@ -1,45 +1,136 @@
-.heroMainContent{
-    display: flex;
-    padding: 0px 5vw;
-    border-bottom: 1px solid black;
-
-    .heroMessage{
-        width: 40%;
-        padding: 12% 1%;
-        display: flex;
-        flex-direction: column;
-        text-align: initial;
-        > h1 {
-            word-wrap: break-word;
-            font-size: 72px;
-        }
-    }
-    .animatedImages{
-        width: 60%;
-        display: grid;
-        grid-template-columns: 0.3fr 0.3fr;
-        justify-content: center;
-    }
-
-    .heroBtns {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 20px;
-
-        .btnRedirectLoginPage:nth-child(2) {
-            background: white;
-            border: 1px solid black;
-            color: black;
-          }
-
-        .btnRedirectLoginPage{
-            width: fit-content;
-            font-weight: 600;
-            padding: 15px 10px;
-        }
-    }
-
+.eventece{
+    margin-right: 10px;
+}
+.animatedImages{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 0.3fr 0.3fr;
+    justify-content: center;
 }
 
+.eventecDesc{
+    text-align: initial;
+    margin-top: 50px;
+}
   
+.heroBtns{
+    margin-top: 50px;
+}
+
+#sentence-wrapper{
+    width: 80%;
+    position: relative;
+    margin: 110px auto 0 auto;
+    font-family: sans-serif;
+    padding: 10px;
+}
+.sentence{
+    margin: 0;
+    text-align: left;
+    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+}
+.sentence span{
+    color: #444;
+    font-size: 200%;
+    font-weight: normal;
+}
+.words{
+    display: inline;
+    text-indent: 10px;
+}
+.words-1 span{
+    position: absolute;
+    opacity: 0;
+    overflow: hidden;
+    color: #dc3545;
+    -webkit-animation: rotateWord 18s linear infinite 0s;
+    -moz-animation: rotateWord 18s linear infinite 0s;
+    -o-animation: rotateWord 18s linear infinite 0s;
+    -ms-animation: rotateWord 18s linear infinite 0s;
+    animation: rotateWord 18s linear infinite 0s;
+}
+.words-1 span:nth-child(2) { 
+    -webkit-animation-delay: 3s; 
+    -moz-animation-delay: 3s; 
+    -o-animation-delay: 3s; 
+    -ms-animation-delay: 3s; 
+    animation-delay: 3s; 
+    color: #dc3545;
+}
+.words-1 span:nth-child(3) { 
+    -webkit-animation-delay: 6s; 
+    -moz-animation-delay: 6s; 
+    -o-animation-delay: 6s; 
+    -ms-animation-delay: 6s; 
+    animation-delay: 6s; 
+    color: #dc3545;    
+}
+.words-1 span:nth-child(4) { 
+    -webkit-animation-delay: 9s;
+    -moz-animation-delay: 9s; 
+    -o-animation-delay: 9s; 
+    -ms-animation-delay: 9s; 
+    animation-delay: 9s; 
+    color: #dc3545;
+}
+.words-1 span:nth-child(5) { 
+    -webkit-animation-delay: 12s; 
+    -moz-animation-delay: 12s; 
+    -o-animation-delay: 12s; 
+    -ms-animation-delay: 12s; 
+    animation-delay: 12s; 
+    color: #dc3545;
+}
+.words-1 span:nth-child(6) { 
+    -webkit-animation-delay: 15s;
+    -moz-animation-delay: 15s; 
+    -o-animation-delay: 15s; 
+    -ms-animation-delay: 15s; 
+    animation-delay: 15s; 
+    color: #dc3545;
+}
+@-webkit-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -webkit-transform: translateY(-30px); }
+    5% { opacity: 1; -webkit-transform: translateY(0px);}
+    17% { opacity: 1; -webkit-transform: translateY(0px); }
+    20% { opacity: 0; -webkit-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-moz-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -moz-transform: translateY(-30px); }
+    5% { opacity: 1; -moz-transform: translateY(0px);}
+    17% { opacity: 1; -moz-transform: translateY(0px); }
+    20% { opacity: 0; -moz-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-o-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -o-transform: translateY(-30px); }
+    5% { opacity: 1; -o-transform: translateY(0px);}
+    17% { opacity: 1; -o-transform: translateY(0px); }
+    20% { opacity: 0; -o-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-ms-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -ms-transform: translateY(-30px); }
+    5% { opacity: 1; -ms-transform: translateY(0px);}
+    17% { opacity: 1; -ms-transform: translateY(0px); }
+    20% { opacity: 0; -ms-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; transform: translateY(-30px); }
+    5% { opacity: 1; transform: translateY(0px);}
+    17% { opacity: 1; transform: translateY(0px); }
+    20% { opacity: 0; transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
