--- a/src/components/style/heroSlider.css
+++ b/src/components/style/heroSlider.css
@@ -11,8 +11,10 @@
   .slider {
     background: pr;
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
-    height: 80vh; /* Set the height of the slider container */
+    height:80vh; /* Set the height of the slider container */
     margin: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
     overflow: hidden;
     position: relative;
     width: 250px; /* Set the width of the slider container to match the slide width */
