Feature cadastrar evento com localização, editar evento, consultar evento, excluir evento
Co-authored-by: Níkolas <nikolas.oliveira0701@gmail.com>

--- a/src/components/style/crudEvent.css
+++ b/src/components/style/crudEvent.css
@@ -9,3 +9,11 @@
         width: fit-content;
     }
 }
+
+.openEventInput{
+    align-self: center;
+
+    >.form-check-label{
+        float: inline-start;
+    }
+}
