--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -1,77 +1,19 @@
 .myAccountBox{
-    width: 500px;
-    text-align: center;
-}
-.myAccountContainer {
-    padding: 15px;
-    border: 1px solid rgba(0, 89, 191, 0.7);
-    margin-top: 50px;
-    border-radius: 50px;
-    box-shadow: 0px 0px 20px 5px rgba(0, 89, 191, 0.7);
-}
-.formContainer, .myAccountBox{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+    border: 1px solid rgb(230, 230, 230);
+    background: white;
+    padding: 30px;
 
-.completeAccountFormBox {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    gap: 5px;
-    margin-top: 40px;
-
-    .completeAccountBtn{
-        margin-top: 10px;
-        border-radius: 8px;
-        border: 0px solid black;
-        height: 45px;
-        width: 80px;
-        align-self: center;
-        font-size: 15px;
-        color: white;
-        background: #1ba71b;
-        font-weight: 700;
+    > form{
+        margin-top: 30px;
     }
 }
 
-.deleteAccountBtn{
+
+.changePasswordContainer {
     margin-top: 50px;
-    background: red;
-    color: white;
-    font-weight: 700;
-    padding: 10px;
-    border: none;
-}
-
-.changePasswordBtn{
-    margin-top: 50px;
-    background: rgb(41, 81, 47);
-    color: white;
-    font-weight: 700;
-    padding: 10px;
-    border: none;
-}
-
-
-.changePassword{
-    margin-top: 50px;
-    background: rgb(41, 70, 81);
-    color: white;
-    font-weight: 700;
-    padding: 10px;
-    border: none;
-}
-
-.changePasswordBox{
     display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    padding: 45px 90px;
-    position: absolute;
-    background: white;
-    /* height: 51px; */
-    box-shadow: 0px 2px 0px 20000px rgb(0 0 0 / 48%);
+}
+
+.menuContainer{
+    height: 100%;
 }
