--- a/src/components/style/signInUp.css
+++ b/src/components/style/signInUp.css
@@ -44,24 +44,6 @@
     gap: 25px;
 }
 
-.input {
-    display: flex;
-    align-items: flex-start;
-    margin: auto;
-    width: 480px;
-    height: 66px;
-    border-radius: 6px;
-    flex-direction: column;
-
-    > label{
-        font-weight: 700;
-    }
-
-    > input, >select {
-        width: 100%;
-        height: 100%;
-    }
-}
 
 
 .forgotPassword span{
@@ -92,4 +74,9 @@
     background: white;
     color: #000000;
     border: 1px solid black;
+}
+
+.formStyle{
+    border: 1px solid black;
+    border-radius: 8px;
 }
