--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -8,6 +8,10 @@
     }
 }
 
+.container-bg{
+    background: #f6f6f6;
+    padding-top: 50px;
+}
 
 .changePasswordContainer {
     margin-top: 50px;
