--- a/src/components/style/global.css
+++ b/src/components/style/global.css
@@ -33,4 +33,8 @@ html {
     background: white;
     padding: 5px 10px;
     border-radius: 7px;
+
+    >:hover{
+        background: black;
+    }
 }
