--- a/src/pages/myAccount.css
+++ b/src/pages/myAccount.css
@@ -11,6 +11,9 @@
 .container-bg{
     background: #f6f6f6;
     padding-top: 50px;
+    > .container{
+        min-height: 80vh;
+    }
 }
 
 .changePasswordContainer {
